# video_annotation_folk

./: .gitattributes  .gitignore  README.md  adobe_2_17.xlsx  adobe_2_19.xlsx  analyze_critique_in_other_datasets.py  analyze_video_labels.py  batch.py  benchmark.py  benchmark_config.py  cam_motion_sfm.py  camera_motion_data.py  camera_setup_data.py  create_labels_excel.py  download.py  error_debug.py  generate_merged_captions.py  generate_motion_caption.py  generate_policy_comparison.py  label.py  labels.md  labels_structure.xlsx  lighting_setup_data.py  motion_benchmark.py  nitpick_detection.py  output_main_all_reviewed_aug_11.xlsx  output_main_reviewed_aug_11.xlsx  pairwise_benchmark.py  pairwise_caption_benchmark.py  policy_comparison.md  prepare_caption_json.py  prepare_caption_only_json.py  prepare_lighting_urls.py  prepare_train_json.py  prepare_train_json_old_oct_12.py  process_json.py  process_ndjson.py  pyproject.toml  requirements.txt  rlhf_v.py  (+14 more)
.devcontainer/: devcontainer.json
annotator/: caption_pizza.json  chancharik_mitra.json  feiyu_qian.json  hewei_wang.json  irene_pi.json  isaac_li.json  jiaxi_li.json  kaibo_yang.json  mingyu_wang.json  ruize_ma.json  ruojin_li.json  shihang_zhu.json  siyuan_cen.json  sunny_guo.json  test_user.json  tiffany_ling.json  tina_xu.json  tingting_yu.json  xianya_dai.json  yili_han.json  yubo_wang.json  yue_lv.json  yuhan_huang.json  yun_yang.json  zhenye_luo.json  zhiqiu_lin.json  zida_zhou.json
caption/: .gitignore  README.md  __init__.py  add_user_to_feedback.py  add_user_to_new_annotator_feedback.py  all_configs.json  all_test_configs.json  analyze_caption_stats.py  app_all.py  camera_motion_app.py  camera_motion_config.json  caption_utils.py  check_duplicate_videos.py  check_missing_user.py  check_video_coverage.py  cleanup_prev_feedback.py  cleanup_sheets.py  count_captions.py  export.md  export.py  export_to_google_sheet.py  export_to_google_sheets.md  feedback_app.py  feedback_system.md  (+40 more)
(+137723 files in other folders)
