[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_annotation"
version = "0.1.0"
description = "Video annotation tools with LLM support"
authors = [
    { name = "Zhiqiu Lin", email = "zl279@cornell.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "streamlit",
    "streamlit-feedback",
    "opencv-python-headless",
    "numpy",
    "google-genai",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "pyngrok",
    "scikit-learn",
    "matplotlib",
    "openpyxl",
    "pandas",
    "streamlit-extras",
    "diff-match-patch",
    # "t2v_metrics @ git+https://github.com/linzhiqiu/t2v_metrics.git@tarsier2",
    "t2v_metrics @ git+https://github.com/chancharikmitra/t2v_metrics.git@main",
]


[tool.setuptools]
include-package-data = true
packages = ["llm", "caption_policy", "caption"]

[tool.setuptools.package-data]
't2v_metrics' = ['**/*.json', '**/*.yaml', '**/*.txt', '**/*.py']